# SARA-R4-Arduino-Client

./: .gitignore  .library.json  .travis.yml  CMakeLists.txt  README.md  keywords.txt  library.properties
examples/: modemconfig.h
examples/GPRSUdpNtpClient/: GPRSUdpNtpClient.ino
examples/NBSSLWebClient/: NBSSLWebClient.ino
examples/NBWebClient/: NBWebClient.ino
examples/ReceiveSMS/: ReceiveSMS.ino
examples/SendSMS/: SendSMS.ino
examples/Tools/ChooseRadioAccessTechnology/: ChooseRadioAccessTechnology.ino
examples/Tools/NBScanNetworks/: NBScanNetworks.ino
examples/Tools/PinManagement/: PinManagement.ino
examples/Tools/SerialSARAPassthrough/: SerialSARAPassthrough.ino
examples/Tools/TestGPRS/: TestGPRS.ino
examples/Tools/TestModem/: TestModem.ino
src/: GPRS.cpp  GPRS.h  Modem.cpp  Modem.h  NB.cpp  NB.h  NBClient.cpp  NBClient.h  NBModem.cpp  NBModem.h  NBPIN.cpp  NBPIN.h  NBSSLClient.cpp  NBSSLClient.h  NBScanner.cpp  NBScanner.h  NBUdp.cpp  NBUdp.h  NB_SMS.cpp  NB_SMS.h  SARAClient.h
src/utility/: NBRootCerts.h  NBSocketBuffer.cpp  NBSocketBuffer.h
